--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:16838b8284bd7c99107dfd90c13dac058ef2330f4c821ff6a8eaf5b875b2030f"
+  "signature": "sha256:598f6abedfe7cb886a0a3b43d07a0a281b19ce8accd02ee09157a5bf1f9e5587"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 84
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -46,13 +46,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 85,
+       "prompt_number": 2,
        "text": [
         "False"
        ]
       }
      ],
-     "prompt_number": 85
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -115,13 +115,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 86,
+       "prompt_number": 3,
        "text": [
         "29847"
        ]
       }
      ],
-     "prompt_number": 86
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -147,13 +147,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 87,
+       "prompt_number": 4,
        "text": [
         "'Cannot decide based on information'"
        ]
       }
      ],
-     "prompt_number": 87
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -202,13 +202,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 88,
+       "prompt_number": 5,
        "text": [
         "'Project B'"
        ]
       }
      ],
-     "prompt_number": 88
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -233,13 +233,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 89,
+       "prompt_number": 6,
        "text": [
         "False"
        ]
       }
      ],
-     "prompt_number": 89
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -287,13 +287,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 90,
+       "prompt_number": 7,
        "text": [
         "6120000"
        ]
       }
      ],
-     "prompt_number": 90
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -347,13 +347,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 91,
+       "prompt_number": 8,
        "text": [
         "74689"
        ]
       }
      ],
-     "prompt_number": 91
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -404,14 +404,14 @@
       "# Project NPV: CapX + PV(ProjectCashFlow) + PV(TerminalValue)\n",
       "fcf        = [-capx]+cf \n",
       "npv        = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
-      "print \"\\nProject NPV = %d\\n\" % fi.rnd(npv) \n",
+      "print(\"\\nProject NPV = %d\\n\" % fi.rnd(npv))\n",
       "\n",
       "# Cashflow Table\n",
       "from pandas import DataFrame \n",
       "years = range(beg, end+1)\n",
       "data  = {'Revenue':           [0]     + rev, \n",
       "         'COGS':              [0]     + cogs, \n",
-      "         'SG&A':              [0]     + ([-sga_i]*life),\n",
+      "         'SG&A':              [0]     + ([-sga]*life),\n",
       "         'Less Dep':          [0]     + ([-depr]*life), \n",
       "         'Op. Profits':       [0]     + oppft, \n",
       "         'Tax':               [0]     + taxes, \n",
@@ -419,11 +419,11 @@
       "         'Plus Dep':          [0]     + ([depr]*life),\n",
       "         'CAPX':              [-capx] + ([0]*life),\n",
       "         'Free Cash Flow':    fcf,\n",
-      "         'Terminal Value':    ([0]*life)+[term]}\n",
+      "         'Terminal Value':    ([None]*life)+[term]}\n",
       "cols  = ['Revenue', 'COGS', 'SG&A', 'Less Dep', 'Op. Profits', \n",
       "         'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow', \n",
       "         'Terminal Value']\n",
-      "print DataFrame(data, columns=cols, index=years, dtype=int).T"
+      "print(DataFrame(data, columns=cols, index=years, dtype=int).T)"
      ],
      "language": "python",
      "metadata": {},
@@ -435,24 +435,31 @@
         "\n",
         "Project NPV = 9815100\n",
         "\n",
-        "                    2012      2013      2014      2015      2016\n",
-        "Revenue                0  15000000  18750000  23437500  29296875\n",
-        "COGS                   0  -9000000 -11250000 -14062500 -17578125\n",
-        "SG&A                   0         0         0         0         0\n",
-        "Less Dep               0  -3000000  -3000000  -3000000  -3000000\n",
-        "Op. Profits            0   3000000   4500000   6375000   8718750\n",
-        "Tax                    0  -1050000  -1575000  -2231250  -3051562\n",
-        "NOPAT                  0   1950000   2925000   4143750   5667187\n",
-        "Plus Dep               0   3000000   3000000   3000000   3000000\n",
-        "CAPX           -12000000         0         0         0         0\n",
-        "Free Cash Flow -12000000   4950000   5925000   7143750   8667187\n",
-        "Terminal Value         0         0         0         0   5000000\n",
+        "                     2012      2013       2014       2015       2016\n",
+        "Revenue                 0  15000000   18750000   23437500   29296875\n",
+        "COGS                    0  -9000000  -11250000  -14062500  -17578125\n",
+        "SG&A                    0         0          0          0          0\n",
+        "Less Dep                0  -3000000   -3000000   -3000000   -3000000\n",
+        "Op. Profits             0   3000000    4500000    6375000    8718750\n",
+        "Tax                     0  -1050000   -1575000   -2231250   -3051562\n",
+        "NOPAT                   0   1950000    2925000    4143750    5667187\n",
+        "Plus Dep                0   3000000    3000000    3000000    3000000\n",
+        "CAPX            -12000000         0          0          0          0\n",
+        "Free Cash Flow  -12000000   4950000    5925000    7143750    8667187\n",
+        "Terminal Value       None      None       None       None    5000000\n",
         "\n",
-        "[11 rows x 5 columns]\n"
+        "[11 rows x 5 columns]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
        ]
       }
      ],
-     "prompt_number": 201
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -506,19 +513,14 @@
       "# Project NPV: CapX + PV(ProjectCashFlow) + PV(TerminalValue)\n",
       "fcf        = [-capx]+cf \n",
       "npv        = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
-      "print \"\\nProject NPV = %d\\n\" % fi.rnd(npv) \n",
-      "\n",
-      "# Project NPV: CapX + PV(ProjectCashFlow) + PV(TerminalValue)\n",
-      "fcf        = [-capx]+cf\n",
-      "npv        = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
-      "print \"\\nProject NPV = %d\\n\" % fi.rnd(npv) \n",
+      "print(\"\\nProject NPV = %d\\n\" % fi.rnd(npv))\n",
       "\n",
       "# Cashflow Table\n",
       "from pandas import DataFrame \n",
       "years = range(beg, end+1)\n",
       "data  = {'Revenue':           [0]     + rev, \n",
       "         'COGS':              [0]     + cogs, \n",
-      "         'SG&A':              [0]     + ([-sga_i]*life),\n",
+      "         'SG&A':              [0]     + ([-sga]*life),\n",
       "         'Less Dep':          [0]     + ([-depr]*life), \n",
       "         'Op. Profits':       [0]     + oppft, \n",
       "         'Tax':               [0]     + taxes, \n",
@@ -526,11 +528,11 @@
       "         'Plus Dep':          [0]     + ([depr]*life),\n",
       "         'CAPX':              [-capx] + ([0]*life),\n",
       "         'Free Cash Flow':    fcf,\n",
-      "         'Terminal Value':    ([0]*life)+[term]}\n",
+      "         'Terminal Value':    ([None]*life)+[term]}\n",
       "cols  = ['Revenue', 'COGS', 'SG&A', 'Less Dep', 'Op. Profits', \n",
       "         'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow', \n",
       "         'Terminal Value']\n",
-      "print DataFrame(data, columns=cols, index=years, dtype=int).T"
+      "print(DataFrame(data, columns=cols, index=years, dtype=int).T)"
      ],
      "language": "python",
      "metadata": {},
@@ -542,40 +544,50 @@
         "\n",
         "Project NPV = 43528493\n",
         "\n",
+        "                        0          1          2          3          4   \\\n",
+        "Revenue                  0   33000000   34650000   36382500   38201625   \n",
+        "COGS                     0  -12000000  -12480000  -12979200  -13498368   \n",
+        "SG&A                     0   -1000000   -1000000   -1000000   -1000000   \n",
+        "Less Dep                 0  -20000000  -20000000  -20000000  -20000000   \n",
+        "Op. Profits              0          0    1170000    2403300    3703257   \n",
+        "Tax                      0          0    -409500    -841155   -1296139   \n",
+        "NOPAT                    0          0     760500    1562145    2407117   \n",
+        "Plus Dep                 0   20000000   20000000   20000000   20000000   \n",
+        "CAPX            -200000000          0          0          0          0   \n",
+        "Free Cash Flow  -200000000   20000000   20760500   21562145   22407117   \n",
+        "Terminal Value        None       None       None       None       None   \n",
         "\n",
-        "Project NPV = 43528493\n",
+        "                       5          6          7          8          9   \\\n",
+        "Revenue          40111706   42117291   44223156   46434313   48756029   \n",
+        "COGS            -14038302  -14599834  -15183828  -15791181  -16422828   \n",
+        "SG&A             -1000000   -1000000   -1000000   -1000000   -1000000   \n",
+        "Less Dep        -20000000  -20000000  -20000000  -20000000  -20000000   \n",
+        "Op. Profits       5073403    6517456    8039327    9643132   11333201   \n",
+        "Tax              -1775691   -2281109   -2813764   -3375096   -3966620   \n",
+        "NOPAT             3297712    4236346    5225563    6268036    7366580   \n",
+        "Plus Dep         20000000   20000000   20000000   20000000   20000000   \n",
+        "CAPX                    0          0          0          0          0   \n",
+        "Free Cash Flow   23297712   24236346   25225563   26268036   27366580   \n",
+        "Terminal Value       None       None       None       None       None   \n",
         "\n",
-        "                       0         1         2         3         4         5   \\\n",
-        "Revenue                 0  33000000  34650000  36382500  38201625  40111706   \n",
-        "COGS                    0 -12000000 -12480000 -12979200 -13498368 -14038302   \n",
-        "SG&A                    0         0         0         0         0         0   \n",
-        "Less Dep                0 -20000000 -20000000 -20000000 -20000000 -20000000   \n",
-        "Op. Profits             0         0   1170000   2403300   3703257   5073403   \n",
-        "Tax                     0         0   -409500   -841155  -1296139  -1775691   \n",
-        "NOPAT                   0         0    760500   1562145   2407117   3297712   \n",
-        "Plus Dep                0  20000000  20000000  20000000  20000000  20000000   \n",
-        "CAPX           -200000000         0         0         0         0         0   \n",
-        "Free Cash Flow -200000000  20000000  20760500  21562145  22407117  23297712   \n",
-        "Terminal Value          0         0         0         0         0         0   \n",
-        "\n",
-        "                      6         7         8         9          10  \n",
-        "Revenue         42117291  44223156  46434313  48756029   51193831  \n",
-        "COGS           -14599834 -15183828 -15791181 -16422828  -17079741  \n",
-        "SG&A                   0         0         0         0          0  \n",
-        "Less Dep       -20000000 -20000000 -20000000 -20000000  -20000000  \n",
-        "Op. Profits      6517456   8039327   9643132  11333201   13114089  \n",
-        "Tax             -2281109  -2813764  -3375096  -3966620   -4589931  \n",
-        "NOPAT            4236346   5225563   6268036   7366580    8524158  \n",
-        "Plus Dep        20000000  20000000  20000000  20000000   20000000  \n",
-        "CAPX                   0         0         0         0          0  \n",
-        "Free Cash Flow  24236346  25225563  26268036  27366580   28524158  \n",
-        "Terminal Value         0         0         0         0  100000000  \n",
+        "                       10  \n",
+        "Revenue          51193831  \n",
+        "COGS            -17079741  \n",
+        "SG&A             -1000000  \n",
+        "Less Dep        -20000000  \n",
+        "Op. Profits      13114089  \n",
+        "Tax              -4589931  \n",
+        "NOPAT             8524158  \n",
+        "Plus Dep         20000000  \n",
+        "CAPX                    0  \n",
+        "Free Cash Flow   28524158  \n",
+        "Terminal Value      1e+08  \n",
         "\n",
         "[11 rows x 11 columns]\n"
        ]
       }
      ],
-     "prompt_number": 203
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -627,13 +639,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 94,
+       "prompt_number": 11,
        "text": [
         "'(H, 23705)'"
        ]
       }
      ],
-     "prompt_number": 94
+     "prompt_number": 11
     }
    ],
    "metadata": {}
