--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f5ff5d3576f374b8925b4801b42bd644f206ce350ccc06e2674cce4b1941f520"
+  "signature": "sha256:66f3417ae381c074d86a27ebc3801dcb303539768cb8026f9b862512a102f8c2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -384,7 +384,7 @@
       "end   = 2016      # Last year of project\n",
       "life  = end-beg   # Project lifetime\n",
       "capx  = 12e6      # $12M Initial CAPX\n",
-      "depr  = capx/life # straight line depreciation \n",
+      "dep   = capx/life # straight line depreciation \n",
       "rev_i = 15e6      # $15M initial revenue\n",
       "rev_g = 0.25      # 25%/yr revenue growth rate\n",
       "cog_i = 9e6       # $9M initial COGS \n",
@@ -396,10 +396,10 @@
       "# Compute the project cashflows\n",
       "rev   = [+fi.comp(rev_i, i, rev_g) for i in range(life)]\n",
       "cogs  = [-fi.comp(cog_i, i, cog_g) for i in range(life)]\n",
-      "oppft = [rev[i]+cogs[i]-sga-depr   for i in range(life)]   \n",
+      "oppft = [rev[i]+cogs[i]-sga-dep    for i in range(life)]   \n",
       "taxes = [-oppft[i]*tax_r           for i in range(life)]  \n",
       "nopat = [oppft[i]+taxes[i]         for i in range(life)]\n",
-      "cf    = [nopat[i]+depr             for i in range(life)]\n",
+      "cf    = [nopat[i]+dep              for i in range(life)]\n",
       "\n",
       "# Project NPV: CapX + PV(ProjectCashFlow) + PV(TerminalValue)\n",
       "fcf        = [-capx]+cf \n",
@@ -408,22 +408,21 @@
       "\n",
       "# Cashflow Table\n",
       "from pandas import DataFrame \n",
-      "years = range(beg, end+1)\n",
       "data  = {'Revenue':           [0]     + rev, \n",
       "         'COGS':              [0]     + cogs, \n",
       "         'SG&A':              [0]     + ([-sga]*life),\n",
-      "         'Less Dep':          [0]     + ([-depr]*life), \n",
+      "         'Less Dep':          [0]     + ([-dep]*life), \n",
       "         'Op. Profits':       [0]     + oppft, \n",
       "         'Tax':               [0]     + taxes, \n",
       "         'NOPAT':             [0]     + nopat,\n",
-      "         'Plus Dep':          [0]     + ([depr]*life),\n",
+      "         'Plus Dep':          [0]     + ([dep]*life),\n",
       "         'CAPX':              [-capx] + ([0]*life),\n",
       "         'Free Cash Flow':    fcf,\n",
       "         'Terminal Value':    ([None]*life)+[term]}\n",
       "cols  = ['Revenue', 'COGS', 'SG&A', 'Less Dep', 'Op. Profits', \n",
       "         'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow', \n",
       "         'Terminal Value']\n",
-      "print(DataFrame(data, columns=cols, index=years, dtype=int).T)"
+      "print(DataFrame(data, columns=cols, index=range(beg,end+1), dtype=int).T)"
      ],
      "language": "python",
      "metadata": {},
@@ -493,7 +492,7 @@
       "end   = 10        # Last year of project\n",
       "life  = end-beg   # Project lifetime\n",
       "capx  = 200e6     # $200M Initial CAPX\n",
-      "depr  = capx/life # straight line depreciation \n",
+      "dep   = capx/life # straight line depreciation \n",
       "rev_i = 33e6      # $33M initial revenue\n",
       "rev_g = 0.05      # 5%/yr revenue growth rate\n",
       "cog_i = 12e6      # $12M initial COGS \n",
@@ -505,10 +504,10 @@
       "# Compute the project cashflows\n",
       "rev   = [+fi.comp(rev_i, i, rev_g) for i in range(life)]\n",
       "cogs  = [-fi.comp(cog_i, i, cog_g) for i in range(life)]\n",
-      "oppft = [rev[i]+cogs[i]-sga-depr   for i in range(life)]   \n",
+      "oppft = [rev[i]+cogs[i]-sga-dep    for i in range(life)]   \n",
       "taxes = [-oppft[i]*tax_r           for i in range(life)]  \n",
       "nopat = [oppft[i]+taxes[i]         for i in range(life)]\n",
-      "cf    = [nopat[i]+depr             for i in range(life)]\n",
+      "cf    = [nopat[i]+dep              for i in range(life)]\n",
       "\n",
       "# Project NPV: CapX + PV(ProjectCashFlow) + PV(TerminalValue)\n",
       "fcf        = [-capx]+cf \n",
@@ -517,22 +516,21 @@
       "\n",
       "# Cashflow Table\n",
       "from pandas import DataFrame \n",
-      "years = range(beg, end+1)\n",
       "data  = {'Revenue':           [0]     + rev, \n",
       "         'COGS':              [0]     + cogs, \n",
       "         'SG&A':              [0]     + ([-sga]*life),\n",
-      "         'Less Dep':          [0]     + ([-depr]*life), \n",
+      "         'Less Dep':          [0]     + ([-dep]*life), \n",
       "         'Op. Profits':       [0]     + oppft, \n",
       "         'Tax':               [0]     + taxes, \n",
       "         'NOPAT':             [0]     + nopat,\n",
-      "         'Plus Dep':          [0]     + ([depr]*life),\n",
+      "         'Plus Dep':          [0]     + ([dep]*life),\n",
       "         'CAPX':              [-capx] + ([0]*life),\n",
       "         'Free Cash Flow':    fcf,\n",
       "         'Terminal Value':    ([None]*life)+[term]}\n",
       "cols  = ['Revenue', 'COGS', 'SG&A', 'Less Dep', 'Op. Profits', \n",
       "         'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow', \n",
       "         'Terminal Value']\n",
-      "print(DataFrame(data, columns=cols, index=years, dtype=int).T)"
+      "print(DataFrame(data, columns=cols, index=range(beg,end+1), dtype=int).T)"
      ],
      "language": "python",
      "metadata": {},
