--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:66f3417ae381c074d86a27ebc3801dcb303539768cb8026f9b862512a102f8c2"
+  "signature": "sha256:e7add77bab9b975cc71b0b8d3792a966194de384804743c3155ec6c92d2b4e64"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -422,7 +422,10 @@
       "cols  = ['Revenue', 'COGS', 'SG&A', 'Less Dep', 'Op. Profits', \n",
       "         'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow', \n",
       "         'Terminal Value']\n",
-      "print(DataFrame(data, columns=cols, index=range(beg,end+1), dtype=int).T)"
+      "print(DataFrame(data, columns=cols, index=range(beg,end+1), dtype=int).T)\n",
+      "print(\"\\n\")\n",
+      "\n",
+      "fi.rnd(npv)"
      ],
      "language": "python",
      "metadata": {},
@@ -454,7 +457,17 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "\n",
+        "\n",
         "\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 9,
+       "text": [
+        "9815100"
        ]
       }
      ],
@@ -530,7 +543,10 @@
       "cols  = ['Revenue', 'COGS', 'SG&A', 'Less Dep', 'Op. Profits', \n",
       "         'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow', \n",
       "         'Terminal Value']\n",
-      "print(DataFrame(data, columns=cols, index=range(beg,end+1), dtype=int).T)"
+      "print(DataFrame(data, columns=cols, index=range(beg,end+1), dtype=int).T)\n",
+      "print(\"\\n\")\n",
+      "\n",
+      "fi.rnd(npv)"
      ],
      "language": "python",
      "metadata": {},
@@ -581,7 +597,17 @@
         "Free Cash Flow   28524158  \n",
         "Terminal Value      1e+08  \n",
         "\n",
-        "[11 rows x 11 columns]\n"
+        "[11 rows x 11 columns]\n",
+        "\n",
+        "\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "43528493"
        ]
       }
      ],
