--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b13b4931c0473e775ce2787d9831117923eb43dd305c95a563456f64a86b5269"
+  "signature": "sha256:622eb15dab6e42931762764748b233d15384ad17339bfc3be4d558035afd5bd3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,22 +9,24 @@
   {
    "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Assignment 1\n",
+      "# "
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import finance_formulas as fi # import the basic finace functions"
+      "import finance_formulas as fi # import the basic finace functions\n",
+      "ans = fi.Answers()            # list of computed answers"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "# Assignment 1"
-     ]
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -38,7 +40,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "False"
+      "ans.add(False)"
      ],
      "language": "python",
      "metadata": {},
@@ -46,13 +48,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 2,
        "text": [
         "False"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -66,7 +68,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "False"
+      "ans.add(False)"
      ],
      "language": "python",
      "metadata": {},
@@ -74,13 +76,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 3,
        "text": [
         "False"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -97,8 +99,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "money_needed = fi.disc(c=400, n=1, r=0.06)\n",
-      "fi.rnd(money_needed)"
+      "r             = 0.06 # 6%/yr interest rate\n",
+      "money_future  = 400  # $400 needed in one year\n",
+      "money_present = fi.disc(money_future, 1, r)\n",
+      "ans.amt(fi.rnd(money_present))"
      ],
      "language": "python",
      "metadata": {},
@@ -106,13 +110,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 62,
+       "prompt_number": 4,
        "text": [
-        "377"
+        "'$377'"
        ]
       }
      ],
-     "prompt_number": 62
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -132,7 +136,7 @@
      "input": [
       "johnny = 100\n",
       "darren = fi.comp(c=100, n=5, r=0.03)\n",
-      "fi.rnd(darren - johnny)"
+      "ans.amt(fi.rnd(darren - johnny))"
      ],
      "language": "python",
      "metadata": {},
@@ -140,13 +144,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 60,
+       "prompt_number": 5,
        "text": [
-        "16"
+        "'$16'"
        ]
       }
      ],
-     "prompt_number": 60
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -164,7 +168,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fi.rnd(fi.comp(c=50000, n=10, r=0.07))"
+      "ans.amt(fi.rnd(fi.comp(c=50000, n=10, r=0.07)))"
      ],
      "language": "python",
      "metadata": {},
@@ -172,13 +176,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 59,
+       "prompt_number": 6,
        "text": [
-        "98358"
+        "'$98,358'"
        ]
       }
      ],
-     "prompt_number": 59
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -196,7 +200,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fi.rnd(fi.comp(c=150, n=8, r=0.035))"
+      "ans.amt(fi.rnd(fi.comp(c=150, n=8, r=0.035)))"
      ],
      "language": "python",
      "metadata": {},
@@ -204,13 +208,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 58,
+       "prompt_number": 7,
        "text": [
-        "198"
+        "'$198'"
        ]
       }
      ],
-     "prompt_number": 58
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -234,7 +238,7 @@
       "tution_future = fi.comp(c=9500, n=7, r=0.07)\n",
       "saving_future = fi.comp(c=9500, n=7, r=0.06)\n",
       "\n",
-      "'(Pre-pay; %i)' % round(tution_future - saving_future)"
+      "ans.add('(Pre-pay; %i)' % fi.rnd(tution_future - saving_future))"
      ],
      "language": "python",
      "metadata": {},
@@ -242,13 +246,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 68,
+       "prompt_number": 8,
        "text": [
         "'(Pre-pay; 970)'"
        ]
       }
      ],
-     "prompt_number": 68
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -270,7 +274,7 @@
       "option_a = fi.comp(c=10000, n=4, r=0.6) + 90000\n",
       "option_b = fi.comp(c=100000, n=4, r=0.12)\n",
       "\n",
-      "'Option %s; %i' % (('A' if option_a > option_b else 'B'), round(abs(option_a - option_b)))"
+      "ans.add('Option %s; %i' % (('A' if option_a > option_b else 'B'), round(abs(option_a - option_b))))"
      ],
      "language": "python",
      "metadata": {},
@@ -278,13 +282,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 67,
+       "prompt_number": 9,
        "text": [
         "'Option B; 1816'"
        ]
       }
      ],
-     "prompt_number": 67
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -306,8 +310,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "n = 5\n",
-      "r = 0.06\n",
+      "r = 0.06 # 6%/yr interest rate\n",
+      "n = 5    # 5 years ownership duration\n",
       "\n",
       "# Model A\n",
       "price_a  = 20000\n",
@@ -319,7 +323,7 @@
       "resale_b = price_b * 0.25\n",
       "cost_b   = price_b - fi.disc(resale_b, n, r)\n",
       "\n",
-      "'Model %s; %i' % (('A' if cost_a < cost_b else 'B'), fi.rnd(abs(cost_a - cost_b)))\n"
+      "ans.add('Model %s; %i' % (('A' if cost_a < cost_b else 'B'), fi.rnd(abs(cost_a - cost_b))))\n"
      ],
      "language": "python",
      "metadata": {},
@@ -327,13 +331,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 66,
+       "prompt_number": 10,
        "text": [
         "'Model A; 2110'"
        ]
       }
      ],
-     "prompt_number": 66
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -354,15 +358,16 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "r             = 0.05\n",
-      "cost_inc_rate = 0.06\n",
-      "cost_initial  = 1590\n",
-      "cost_total    = 0\n",
-      "for i in range(10):\n",
-      "  cost_current = fi.comp(cost_initial, i, cost_inc_rate)   \n",
-      "  cost_total  += fi.disc(cost_current, i+1, r)\n",
+      "r        = 0.05 # 5%/yr interest rate\n",
+      "duration = 10   # 10 years ownership duration\n",
+      "main_i   = 1590 # $1,590 maintenace for first year\n",
+      "main_g   = 0.06 # 6%/yr maintenace growth rate\n",
       "\n",
-      "fi.rnd(cost_total)"
+      "total_cost = 0\n",
+      "for i in range(duration):\n",
+      "  total_cost += fi.disc(fi.comp(main_i, i, main_g), i+1, r)   \n",
+      "\n",
+      "ans.amt(fi.rnd(total_cost))"
      ],
      "language": "python",
      "metadata": {},
@@ -370,21 +375,48 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 69,
+       "prompt_number": 11,
        "text": [
-        "15809"
+        "'$15,809'"
        ]
       }
      ],
-     "prompt_number": 69
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Answers"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "ans.display()"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 1. False\n",
+        " 2. False\n",
+        " 3. 377\n",
+        " 4. 16\n",
+        " 5. 98358\n",
+        " 6. 198\n",
+        " 7. (Pre-pay; 970)\n",
+        " 8. Option B; 1816\n",
+        " 9. Model A; 2110\n",
+        "10. 15809\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
     }
    ],
    "metadata": {}
