--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0f8daeb51f494f458e94a4f4f064f577d289ecdd19eec4945e4a610b1cf68498"
+  "signature": "sha256:98397e9288cb502407109e268f6274dbecbcc3603c8cf5fd1bcfdd4a0cb1e740"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,22 +9,24 @@
   {
    "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Assignment 2\n",
+      "# "
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import finance_formulas as fi # import the basic finace functions"
+      "import finance_formulas as fi # import the basic finace functions\n",
+      "ans = fi.Answers()            # list of computed answers"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
      "prompt_number": 1
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "# Assignment 2"
-     ]
     },
     {
      "cell_type": "markdown",
@@ -40,7 +42,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "False"
+      "ans.add(False)"
      ],
      "language": "python",
      "metadata": {},
@@ -75,7 +77,7 @@
       "r = 0.07\n",
       "c = 4800\n",
       "\n",
-      "fi.rnd(fi.fv(c, n, r))"
+      "ans.amt(fi.rnd(fi.fv(c, n, r)))"
      ],
      "language": "python",
      "metadata": {},
@@ -85,7 +87,7 @@
        "output_type": "pyout",
        "prompt_number": 3,
        "text": [
-        "453412"
+        "'$453,412'"
        ]
       }
      ],
@@ -112,7 +114,7 @@
       "r = 0.035\n",
       "c = 1000\n",
       "\n",
-      "fi.rnd(fi.fv(c, n, r))"
+      "ans.amt(fi.rnd(fi.fv(c, n, r)))"
      ],
      "language": "python",
      "metadata": {},
@@ -122,7 +124,7 @@
        "output_type": "pyout",
        "prompt_number": 4,
        "text": [
-        "22705"
+        "'$22,705'"
        ]
       }
      ],
@@ -148,7 +150,7 @@
       "r = 0.03\n",
       "c = 25000\n",
       "\n",
-      "fi.rnd(fi.pv(c, n, r))"
+      "ans.amt(fi.rnd(fi.pv(c, n, r)))"
      ],
      "language": "python",
      "metadata": {},
@@ -158,7 +160,7 @@
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
-        "114493"
+        "'$114,493'"
        ]
       }
      ],
@@ -180,11 +182,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "r = 0.04\n",
       "c = 200\n",
       "n = 40\n",
-      "r = 0.04\n",
       "\n",
-      "fi.rnd(fi.pv(c, n, r))"
+      "ans.amt(fi.rnd(fi.pv(c, n, r)))"
      ],
      "language": "python",
      "metadata": {},
@@ -194,7 +196,7 @@
        "output_type": "pyout",
        "prompt_number": 6,
        "text": [
-        "3959"
+        "'$3,959'"
        ]
       }
      ],
@@ -217,10 +219,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "loan = 0.8 * 250000\n",
       "r    = 0.06/12\n",
+      "loan = 0.8 * 250e3\n",
       "\n",
-      "fi.rnd(loan * r)"
+      "ans.amt(fi.rnd(loan * r))"
      ],
      "language": "python",
      "metadata": {},
@@ -230,7 +232,7 @@
        "output_type": "pyout",
        "prompt_number": 7,
        "text": [
-        "1000"
+        "'$1,000'"
        ]
       }
      ],
@@ -251,11 +253,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "r = 0.09\n",
+      "r          = 0.09\n",
       "investment = fi.comp(75000, 10, r)\n",
       "education  = fi.fv(30000, 4, r)\n",
       "\n",
-      "fi.rnd(investment - education)"
+      "ans.amt(fi.rnd(investment - education))"
      ],
      "language": "python",
      "metadata": {},
@@ -265,7 +267,7 @@
        "output_type": "pyout",
        "prompt_number": 8,
        "text": [
-        "40358"
+        "'$40,358'"
        ]
       }
      ],
@@ -298,12 +300,7 @@
       "r_6 = 0.06/12\n",
       "p_6 = fi.pmt(bal, n_6, r_6)\n",
       "\n",
-      "if (p_6 < p_8):\n",
-      " ans = '(yes, %s)' % str(fi.rnd(p_8-p_6))\n",
-      "else:\n",
-      " ans = '(no, %s)'  % str(fi.rnd(p_6-p_8))\n",
-      "\n",
-      "ans"
+      "ans.add('(%s, %i)' % ('yes' if (p_6 < p_8) else 'no', fi.rnd(abs(p_6-p_8))))"
      ],
      "language": "python",
      "metadata": {},
@@ -338,8 +335,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "loan      = 20000 - 4000\n",
       "r         = 0.06/12\n",
+      "loan      = 20000 - 4000\n",
       "n         = 48\n",
       "payment   = fi.pmt(loan, n, r)\n",
       "balance   = fi.pv(payment, n/2, r)\n",
@@ -347,12 +344,7 @@
       "r_new     = 0.04/12 \n",
       "old_price = fi.pv(payment, n/2, r_new)\n",
       "\n",
-      "if (new_price < old_price):\n",
-      " ans = '(yes, gain %s)' % str(fi.rnd(old_price - new_price))\n",
-      "else:\n",
-      " ans = '(no, lose %s)'  % str(fi.rnd(new_price - old_price))\n",
-      "\n",
-      "ans"
+      "ans.add('(%s %i)' % ('yes, gain' if new_price < old_price else 'no, lose', fi.rnd(abs(old_price - new_price))))"
      ],
      "language": "python",
      "metadata": {},
@@ -391,7 +383,7 @@
       "option_1 = 6000\n",
       "option_2 = fi.pv(125, 48, rate) + fi.disc(1000, 48, rate)\n",
       "\n",
-      "fi.rnd(option_1 if (option_1 < option_2) else option_2)"
+      "ans.amt(fi.rnd(option_1 if (option_1 < option_2) else option_2))"
      ],
      "language": "python",
      "metadata": {},
@@ -401,7 +393,7 @@
        "output_type": "pyout",
        "prompt_number": 11,
        "text": [
-        "6000"
+        "'$6,000'"
        ]
       }
      ],
@@ -411,7 +403,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Extra Question: 1\n",
+      "### Question 11 (Extra)\n",
       "(15 points) You are interested in a new Ford Taurus. After visiting your Ford dealer, \n",
       "doing your research on the best leases available, you have three options. (i) Purchase \n",
       "the car for cash and receive a \\$1,500 cash rebate from Dealer A. The price of the car is \n",
@@ -448,13 +440,13 @@
       "option_3        = fi.pv(monthly_payment, n, r)\n",
       "\n",
       "if (option_1 < option_2 and option_1 < option_3):\n",
-      "  ans = 'Option 1 (Dealer A): %s' % fi.rnd(option_1)\n",
+      "  a = 'Option 1 (Dealer A): %s' % fi.rnd(option_1)\n",
       "elif (option_2 < option_3):\n",
-      "  ans = 'Option 2 (Dealer B): %s' % fi.rnd(option_2)\n",
+      "  a = 'Option 2 (Dealer B): %s' % fi.rnd(option_2)\n",
       "else:\n",
-      "  ans = 'Option 3 (Dealer C): %s' % fi.rnd(option_3)\n",
+      "  a = 'Option 3 (Dealer C): %s' % fi.rnd(option_3)\n",
       "\n",
-      "ans"
+      "ans.add(a)"
      ],
      "language": "python",
      "metadata": {},
@@ -474,7 +466,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Extra Question: 2\n",
+      "### Question 12 (Extra)\n",
       "Suppose you are exactly 30 years old. You believe that you will be able to save for\n",
       "the next 20 years, until you are 50. For 10 years following that, and till your \n",
       "retirement at age 60, you will have a spike in expenses and you will not be\n",
@@ -492,7 +484,7 @@
       "expenses         = fi.disc(fi.pv(8000, (80-60)*12, r), (60-30)*12, r)\n",
       "saving_per_month = fi.pmt(expenses, (50-30)*12, r)\n",
       "\n",
-      "fi.rnd(saving_per_month)"
+      "ans.amt(fi.rnd(saving_per_month))"
      ],
      "language": "python",
      "metadata": {},
@@ -502,11 +494,48 @@
        "output_type": "pyout",
        "prompt_number": 13,
        "text": [
-        "732"
+        "'$732'"
        ]
       }
      ],
      "prompt_number": 13
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Answers"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.display()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 1. False\n",
+        " 2. 453412\n",
+        " 3. 22705\n",
+        " 4. 114493\n",
+        " 5. 3959\n",
+        " 6. 1000\n",
+        " 7. 40358\n",
+        " 8. (yes, 5)\n",
+        " 9. (no, lose 25)\n",
+        "10. 6000\n",
+        "11. Option 1 (Dealer A): 13500\n",
+        "12. 732\n"
+       ]
+      }
+     ],
+     "prompt_number": 14
     }
    ],
    "metadata": {}
