--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a601d6153ee671cd0d8cf3fb4f9aba6221b6fcc791e3cc3ff39854a743824167"
+  "signature": "sha256:27525b267c5ced995734c203f07c0427f59856fba99f513001a2d737d20660bf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,22 +9,24 @@
   {
    "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Assignment 3\n",
+      "# "
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import finance_formulas as fi # import the basic finace functions"
+      "import finance_formulas as fi # import the basic finace functions\n",
+      "ans = fi.Answers()            # list of computed answers"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
      "prompt_number": 1
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "# Assignment 3"
-     ]
     },
     {
      "cell_type": "markdown",
@@ -46,7 +48,7 @@
       "r   = 0.06/12\n",
       "npv = -1200 + fi.disc(450, 3, r) + fi.disc(450, 6, r) + fi.disc(450, 15, r)\n",
       "\n",
-      "fi.rnd(npv)"
+      "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
@@ -56,7 +58,7 @@
        "output_type": "pyout",
        "prompt_number": 2,
        "text": [
-        "98"
+        "'$98'"
        ]
       }
      ],
@@ -79,21 +81,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "cf  = [ \n",
-      "    #     CF  # Year\n",
-      "      -50000, #    0\n",
-      "        2500, #    1\n",
-      "        5000, #    2\n",
-      "        5000, #    3\n",
-      "        7500, #    4\n",
-      "       10000, #    5\n",
-      "       10000, #    6\n",
-      "       15000, #    7\n",
-      "       15000  #    8\n",
-      "]\n",
+      "# Year:     0,    1,    2,    3,    4,     5,     6,     7,     8\n",
+      "cf  = [-50000, 2500, 5000, 5000, 7500, 10000, 10000, 15000, 15000]\n",
       "irr = fi.irr(cf)\n",
       "\n",
-      "round(irr*100, 2)"
+      "ans.add(round(irr*100, 2))"
      ],
      "language": "python",
      "metadata": {},
@@ -138,7 +130,7 @@
       "    year += 1\n",
       "    cost += fi.disc(gas_savings, year, r)\n",
       "\n",
-      "year"
+      "ans.add(year)"
      ],
      "language": "python",
      "metadata": {},
@@ -184,7 +176,7 @@
       "cf = [-initial_investment] + [income_per_week]*weeks\n",
       "npv = fi.npv(cf, r)\n",
       "\n",
-      "fi.rnd(npv)"
+      "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
@@ -194,7 +186,7 @@
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
-        "3720"
+        "'$3,720'"
        ]
       }
      ],
@@ -230,7 +222,7 @@
       "cost_new    = balance_new + 4500 # closing costs\n",
       "savings     = cost_old - cost_new \n",
       "\n",
-      "fi.rnd(savings)"
+      "ans.amt(fi.rnd(savings))"
      ],
      "language": "python",
      "metadata": {},
@@ -240,7 +232,7 @@
        "output_type": "pyout",
        "prompt_number": 6,
        "text": [
-        "23686"
+        "'$23,686'"
        ]
       }
      ],
@@ -271,7 +263,7 @@
       "cf                = [-purchase_price] + revenue_stream\n",
       "npv               = fi.npv(cf, r)\n",
       "\n",
-      "fi.rnd(npv)"
+      "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
@@ -281,7 +273,7 @@
        "output_type": "pyout",
        "prompt_number": 7,
        "text": [
-        "10444699"
+        "'$10,444,699'"
        ]
       }
      ],
@@ -316,7 +308,7 @@
       "n    = 20\n",
       "npv  = -cost + fi.pv(earn, n, r, g)\n",
       "\n",
-      "fi.rnd(npv)"
+      "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
@@ -326,7 +318,7 @@
        "output_type": "pyout",
        "prompt_number": 8,
        "text": [
-        "1554745"
+        "'$1,554,745'"
        ]
       }
      ],
@@ -380,7 +372,7 @@
       "# The NPV of attending college\n",
       "npv              = pv_college - oppurtunity_cost\n",
       "\n",
-      "fi.rnd(npv)"
+      "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
@@ -390,7 +382,7 @@
        "output_type": "pyout",
        "prompt_number": 9,
        "text": [
-        "275996"
+        "'$275,996'"
        ]
       }
      ],
@@ -423,7 +415,7 @@
       "npv        = fi.npv(cf, r)\n",
       "irr        = fi.irr(cf)\n",
       "\n",
-      "'(%d; %.2f%%)' % (fi.rnd(npv), round(irr*100, 2))"
+      "ans.add('(%d; %.2f%%)' % (fi.rnd(npv), round(irr*100, 2)))"
      ],
      "language": "python",
      "metadata": {},
@@ -472,7 +464,7 @@
       "npv            = fi.npv(cf, r)\n",
       "npv_today      = fi.comp(npv, n_init, r)\n",
       "\n",
-      "fi.rnd(npv_today)"
+      "ans.amt(fi.rnd(npv_today))"
      ],
      "language": "python",
      "metadata": {},
@@ -482,11 +474,46 @@
        "output_type": "pyout",
        "prompt_number": 11,
        "text": [
-        "74022"
+        "'$74,022'"
        ]
       }
      ],
      "prompt_number": 11
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Answers"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.display()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 1. 98\n",
+        " 2. 6.34\n",
+        " 3. 5\n",
+        " 4. 3720\n",
+        " 5. 23686\n",
+        " 6. 10444699\n",
+        " 7. 1554745\n",
+        " 8. 275996\n",
+        " 9. (42977; 11.09%)\n",
+        "10. 74022\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
     }
    ],
    "metadata": {}
