--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e7add77bab9b975cc71b0b8d3792a966194de384804743c3155ec6c92d2b4e64"
+  "signature": "sha256:2a8441b7d7ca5eed87c54c4baefa16c2fc03dec1bd4b3e03055c52dabf99d33f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,22 +9,24 @@
   {
    "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Assignment 4\n",
+      "# "
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import finance_formulas as fi # import the basic finace functions"
+      "import finance_formulas as fi # import the basic finace functions\n",
+      "ans = fi.Answers()            # list of computed answers"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
      "prompt_number": 1
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "# Assignment 4"
-     ]
     },
     {
      "cell_type": "markdown",
@@ -38,7 +40,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "False"
+      "ans.add(False)"
      ],
      "language": "python",
      "metadata": {},
@@ -99,15 +101,14 @@
       "bene = [bene_yr]*life\n",
       "\n",
       "# Combine the above cashflows and mixin the onetime costs/revenues\n",
-      "cf           = [-capx]\n",
-      "for i in range(life): cf.append(main[i]+opex[i]+advt[i]+bene[i])\n",
+      "cf           = [-capx] + [main[i]+opex[i]+advt[i]+bene[i] for i in range(life)]\n",
       "cf[ovhl_sd] += -ovhl\n",
       "cf[life]    += +term\n",
       "\n",
       "# Compute the NPV of the project cashflows\n",
       "npv = fi.npv(cf, r)\n",
       "\n",
-      "fi.rnd(npv)"
+      "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
@@ -117,7 +118,7 @@
        "output_type": "pyout",
        "prompt_number": 3,
        "text": [
-        "29847"
+        "'$29,847'"
        ]
       }
      ],
@@ -139,7 +140,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "'Cannot decide based on information'"
+      "ans.add('Cannot decide based on information')"
      ],
      "language": "python",
      "metadata": {},
@@ -172,29 +173,14 @@
      "collapsed": false,
      "input": [
       "r    =  0.05 # 5%/yr discount rate\n",
-      "cf_a = [\n",
-      "#          CF  # Year\n",
-      "        -10e6, # 0 \n",
-      "          4e6, # 1\n",
-      "          4e6, # 2\n",
-      "          5e6  # 3\n",
-      "       ] \n",
-      "cf_b = [\n",
-      "#          CF  # Year\n",
-      "        -10e6, # 0 \n",
-      "            0, # 1\n",
-      "            0, # 2\n",
-      "         14e6  # 3\n",
-      "       ] \n",
+      "# Year:     0,   1,   2,    3\n",
+      "cf_a = [-10e6, 4e6, 4e6,  5e6] \n",
+      "cf_b = [-10e6,   0,   0, 14e6]\n",
+      "\n",
       "npv_a = fi.npv(cf_a, r)\n",
       "npv_b = fi.npv(cf_b, r)\n",
       "\n",
-      "if (npv_a > npv_b):\n",
-      "    ans = 'Project A'\n",
-      "else:\n",
-      "    ans = 'Project B'\n",
-      "\n",
-      "ans"
+      "ans.add('Project A' if (npv_a > npv_b) else 'Project B')"
      ],
      "language": "python",
      "metadata": {},
@@ -225,7 +211,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "False"
+      "ans.add(False)"
      ],
      "language": "python",
      "metadata": {},
@@ -260,26 +246,18 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rev     =  20e6 # Revenues\n",
-      "cogs    =  12e6 # COGS\n",
-      "sga     =   2e6 # SG&A\n",
+      "rev   = 20e6    # $20 million revenues\n",
+      "rev_g = 0.06    # 6%/yr revenue growth\n",
+      "cog   = 12e6    # $12 million COGS\n",
+      "cog_g = 0.03    # 3%/yr revenue growth\n",
+      "sga   = 2e6     # $2 million SG&A\n",
+      "ar    = 6e6     # $6 million Account Receivables (AR)\n",
+      "ar_g  = 0.12    # 12%/yr AR growth\n",
+      "wc    = ar*ar_g # change in corking capital; only AR is changed\n",
       "\n",
-      "# Working Capital (WC)\n",
-      "ar      =   6e6 # AR\n",
-      "inv     =   4e6 # Inventory\n",
-      "ap      =   4e6 # AP\n",
+      "fcf = fi.comp(rev, 1, rev_g) - fi.comp(cog, 1, cog_g) - sga - wc\n",
       "\n",
-      "stmt = [\n",
-      "      + rev  * (1+0.06), # Revenues: up by 6%\n",
-      "      - cogs * (1+0.03), # COGS: up by 3%\n",
-      "      - sga,             # SG&A: unchanged\n",
-      "      - ar   * 0.12      # WC Change: 12% increase in AR\n",
-      "]\n",
-      "\n",
-      "fcf = 0\n",
-      "for i in stmt: fcf += i\n",
-      "\n",
-      "fi.rnd(fcf)"
+      "ans.amt(fi.rnd(fcf))"
      ],
      "language": "python",
      "metadata": {},
@@ -289,7 +267,7 @@
        "output_type": "pyout",
        "prompt_number": 7,
        "text": [
-        "6120000"
+        "'$6,120,000'"
        ]
       }
      ],
@@ -339,7 +317,7 @@
       "for i in range(life): cf[i+1] = rev_new[i] - rev_old[i]\n",
       "npv = fi.npv(cf, r)\n",
       "\n",
-      "fi.rnd(npv)"
+      "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
@@ -349,7 +327,7 @@
        "output_type": "pyout",
        "prompt_number": 8,
        "text": [
-        "74689"
+        "'$74,689'"
        ]
       }
      ],
@@ -425,7 +403,7 @@
       "print(DataFrame(data, columns=cols, index=range(beg,end+1), dtype=int).T)\n",
       "print(\"\\n\")\n",
       "\n",
-      "fi.rnd(npv)"
+      "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
@@ -467,7 +445,7 @@
        "output_type": "pyout",
        "prompt_number": 9,
        "text": [
-        "9815100"
+        "'$9,815,100'"
        ]
       }
      ],
@@ -546,7 +524,7 @@
       "print(DataFrame(data, columns=cols, index=range(beg,end+1), dtype=int).T)\n",
       "print(\"\\n\")\n",
       "\n",
-      "fi.rnd(npv)"
+      "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
@@ -597,7 +575,14 @@
         "Free Cash Flow   28524158  \n",
         "Terminal Value      1e+08  \n",
         "\n",
-        "[11 rows x 11 columns]\n",
+        "[11 rows x 11 columns]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "\n",
         "\n"
        ]
@@ -607,7 +592,7 @@
        "output_type": "pyout",
        "prompt_number": 10,
        "text": [
-        "43528493"
+        "'$43,528,493'"
        ]
       }
      ],
@@ -650,12 +635,7 @@
       "npv_l      = fi.npv(cf_l, r)                # npv of cashflow at 6% \n",
       "ann_cost_l = fi.pmt(npv_l, life_l, r)       # annulaized cost computed as payments\n",
       "\n",
-      "if (ann_cost_l < ann_cost_h):\n",
-      "    ans = '(L, %d)' % fi.rnd(ann_cost_l)\n",
-      "else:\n",
-      "    ans = '(H, %d)' % fi.rnd(ann_cost_h)\n",
-      "\n",
-      "ans"
+      "ans.add('(%s, %d)' % ('L', fi.rnd(ann_cost_l)) if ann_cost_l < ann_cost_h else ('H', fi.rnd(ann_cost_h)))"
      ],
      "language": "python",
      "metadata": {},
@@ -665,11 +645,46 @@
        "output_type": "pyout",
        "prompt_number": 11,
        "text": [
-        "'(H, 23705)'"
+        "('H', 23705)"
        ]
       }
      ],
      "prompt_number": 11
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Answers"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.display()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 1. False\n",
+        " 2. 29847\n",
+        " 3. Cannot decide based on information\n",
+        " 4. Project B\n",
+        " 5. False\n",
+        " 6. 6120000\n",
+        " 7. 74689\n",
+        " 8. 9815100\n",
+        " 9. 43528493\n",
+        "10. ('H', 23705)\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
     }
    ],
    "metadata": {}
